@@ -1,4 +1,4 @@
 <head>
   <meta http-equiv="refresh" content="1; url=https://wejkey.org">
-  <script> setTimeout(() => { window.location.href = "https://wejkey.org/"; }, 1); </script>
+  <script> setTimeout(() => { window.location.href = "https://wejkey.org/"; }, 1);</script>
 </head>
