@@ -61,7 +61,7 @@
           <h1 class="glitch" data-text="Wejkey">Wejkey</h1>
           <p class="subtitle">Someone making something somewhere</p>
           <div class="hero-icons">
-            <a style="text-decoration: none;" class="icon-btn" href="https://discord.gg/Hggmz2Eg5T" target="_blank" rel="noopener noreferrer" title="Open Discord invite"><i class="fab fa-discord"></i></a>
+            <a style="text-decoration: none;" class="icon-btn" href="https://discord.preminent.net" target="_blank" rel="noopener noreferrer" title="Open Discord invite"><i class="fab fa-discord"></i></a>
             <button class="icon-btn" data-copy="contact@wejkey.org" title="Click to copy email"><i class="fas fa-envelope"></i></button>
             <button class="icon-btn" data-copy="https://steamcommunity.com/id/wejkey/" title="Click to copy Steam"><i class="fa-brands fa-steam"></i></button>
             <button class="icon-btn" data-copy="https://github.com/wejkey" title="Click to copy GitHub"><i class="fa-brands fa-github"></i></button>
@@ -76,6 +76,8 @@
           </div>
           <div class="quick-links">
  
+            <!--
+
             <a class="link-row link-row-review" href="https://preminent.net" target="_blank" rel="noopener">
               <div class="row-copy">
                 <p class="eyebrow">Minecraft server (?)</p>
@@ -83,6 +85,8 @@
               </div>
               <div class="pill ghost">Visit</div>
             </a>
+
+          -->
 
             <a class="link-row link-row-database" href="https://database.wejkey.org" target="_blank" rel="noopener">
               <div class="row-copy">
